--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "opera-sfc",
+  "name": "u2u-sfc",
   "version": "3.0.4-rc.3",
   "description": "Special Fee Contract",
   "scripts": {
@@ -39,9 +39,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Fantom-foundation/opera-sfc.git"
+    "url": "https://github.com/unicornultrafoundation/u2u-sfc.git"
   },
-  "author": "Fantom Foundation",
+  "author": "Unicorn Ultra Foundation",
   "license": "MIT",
   "dependencies": {
     "@nomiclabs/hardhat-ethers": "^2.2.1",
