--- a/.eslintrc
+++ b/.eslintrc
@@ -15,7 +15,8 @@
        "indent": ["error", 4],
        "func-names": "off",
        "max-len": "off",
-       "no-underscore-dangle": "off"
+       "no-underscore-dangle": "off",
+       "no-restricted-syntax": "off"
      }
 }
 
