--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,17 @@
-.idea/
 node_modules
-build
-coverage
-coverage.json
-/.coverage_artifacts/
-/.coverage_contracts/
-/coverageEnv/
-/coverageEnv/
-artifacts/
-cache/
 .env
+
+# Hardhat files
+/cache
+/artifacts
+
+# TypeChain files
+/typechain
+/typechain-types
+
+# solidity-coverage files
+/coverage
+/coverage.json
+
+# Hardhat Ignition default folder for deployments against a local node
+ignition/deployments/chain-31337
