--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1,0,0",
   "license": "MIT",
   "scripts": {
+    "compile": "hardhat compile",
     "test": "hardhat test"
   },
   "devDependencies": {
